# everybody_codes

./: .gitignore
2024/kingdom_of_algorithmia/Rust/quest01/: Cargo.toml
2024/kingdom_of_algorithmia/Rust/quest01/benches/: part1.rs  part2.rs  part3.rs
2024/kingdom_of_algorithmia/Rust/quest01/src/: lib.rs  part1.rs  part2.rs  part3.rs
2024/kingdom_of_algorithmia/Rust/quest02/: Cargo.toml
2024/kingdom_of_algorithmia/Rust/quest02/benches/: part1.rs  part2.rs  part3.rs
2024/kingdom_of_algorithmia/Rust/quest02/src/: lib.rs  part1.rs  part2.rs  part3.rs
