[package]
name = "quest02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.3"
fxhash = "0.2.1"
itertools = "0.14.0"
miette = "7"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
divan = "0.1"

[profile.release]
debug = true

[[bench]]
name = "part1"
harness = false

[[bench]]
name = "part2"
harness = false

[[bench]]
name = "part3"
harness = false
